@@ -36,12 +36,12 @@
         .area RODATA
         .area XINIT
 
-        .area ZP      (PAG)
-        .area OSEG    (PAG, OVR)
-
 	.area _DATA
         .area DATA
         .area BSS
+
+        .area ZP      (PAG)
+        .area OSEG    (PAG, OVR)
 
 	;; Reset/interrupt vectors
         .area   CODEIVT (ABS)
@@ -60,24 +60,24 @@ __sdcc_gs_init_startup:
 __sdcc_init_data:
 ;; initialize DATA
         lda #<s_XINIT
-        sta ___memcpy_PARM_2
+        sta *___memcpy_PARM_2
         lda #>s_XINIT
-        sta ___memcpy_PARM_2+1
+        sta *___memcpy_PARM_2+1
         lda #<l_XINIT
-        sta ___memcpy_PARM_3
+        sta *___memcpy_PARM_3
         lda #>l_XINIT
-        sta ___memcpy_PARM_3+1
+        sta *___memcpy_PARM_3+1
         lda #<s_DATA
         ldx #>s_DATA
         jsr ___memcpy
 
 ;; clear BSS
         lda #0x00
-        sta _memset_PARM_2
+        sta *_memset_PARM_2
         lda #<l_BSS
-        sta _memset_PARM_3
+        sta *_memset_PARM_3
         lda #>l_BSS
-        sta _memset_PARM_3+1
+        sta *_memset_PARM_3+1
         lda #<s_BSS
         ldx #>s_BSS
         jsr _memset
